# CIFAR-10_image_classifier

./: .gitignore  CIFAR-10_Image_Classifier-STARTER.html  CIFAR-10_Image_Classifier-STARTER.ipynb  cifar10_model.pt  pyproject.toml
