[tool.poetry]
name = "cifar-10-image-classifier"
version = "0.1.0"
description = "PyTorch-based image classifier and object detection on the CIFAR-10 dataset."
authors = ["Gianluca Manca <gianluca.manca89@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cifar_10_image_classifier"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
torch = ">=1.4"
torchvision = ">=0.8"
numpy = ">=1.16"
matplotlib = ">=3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
